# game_platform

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  game_platform_app_stack.yaml
app/: .dockerignore  .env  Cargo.toml  Dockerfile  askama.toml
app/migrations/2020-07-24-080231_create_users/: up.sql
app/migrations/2020-08-04-054456_users_data/: down.sql  up.sql
app/migrations/2020-09-02-074538_checkers_game_chat/: down.sql  up.sql
app/src/: database.rs  email.rs  main.rs  models.rs  schema.rs  templates.rs
app/src/checkers_game/: mod.rs
app/src/checkers_game/chat/: chat.rs  chat_database.rs  chat_models.rs  mod.rs  server.rs
app/web_layout/: index.html  user_info.html
app/web_layout/css/: index.css
app/web_layout/js/: reload.js  user_info.js
app/web_layout/obsolete/: index.html
app/web_layout/obsolete/js/: user_info.js
app/web_layout/obsolete/templates/: all_users.html
app/web_layout/templates/: all_users.html  default_user_info.html  super_user_info.html  user_info.html
app/web_layout/wasm/: package.json  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm  wasm_bg.wasm.d.ts
yew_app/: Cargo.toml
yew_app/src/: lib.rs  route.rs  types.rs
yew_app/src/components/: all_users.rs  checkers_board.rs  checkers_chat.rs  mod.rs  navbar.rs
yew_app/src/pages/: all_users.rs  checkers_game.rs  homepage.rs  mod.rs  register_user.rs  sign_in_user.rs  user_info.rs
yew_app/web_layout/css/: index.css
yew_app/web_layout/wasm/: wasm.js  wasm_bg.d.ts  wasm_bg.wasm
