[package]
name = "game_platform"
version = "0.1.0"
authors = ["roman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
actix-files = "0.2"
serde = "1.0"
failure = "0.1.8"
actix-http = "1.0.1"

diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8"

bytes = "0.5"
env_logger = "0.7"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"
chrono = "0.4.15"

askama = "0.10.3"

actix = "0.9"
actix-web-actors = "2.0"

rand = "0.7"
byteorder = "1.3"
futures = "0.3"
