[package]
name = "game_platform"
version = "0.1.0"
authors = ["roman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-files = "0.4.0"
serde = "1.0.117"
failure = "0.1.8"
actix-http = "2.0.0"

diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"

bytes = "0.5.6"
env_logger = "0.8.1"
serde_json = "1.0.59"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"

askama = "0.10.3"

actix = "0.10.0"
actix-web-actors = "3.0.0"

rand = "0.7.3"
byteorder = "1.3.4"
futures = "0.3.6"

lettre = "0.9.3"
lettre_email = "0.9.4"
mime = "0.3.16"
