[package]
name = "game_platform"
version = "0.1.0"
authors = ["roman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
serde = "1.0.125"
failure = "0.1.8"
actix-http = "2.2.0"

diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"

bytes = "1.0.1"
env_logger = "0.8.3"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust-crypto = "0.2.36"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"

askama = "0.10.5"

actix = "0.10.0"
actix-web-actors = "3.0.0"

rand = "0.8.3"
byteorder = "1.4.3"
futures = "0.3.13"

lettre = "0.9.3"
lettre_email = "0.9.4"
mime = "0.3.16"
