[package]
name = "game_platform_yew"
version = "0.1.0"
authors = ["Roman <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.68"
anyhow = "1.0.33"
serde = "1.0.117"
serde_json = "1.0.59"
web-sys = "0.3.45"
yew-router = "0.14.0"
validator = "0.11.0"
dotenv_codegen = "0.15.0"
