[package]
name = "game_platform_yew"
version = "0.1.0"
authors = ["Roman <roman.a.shushakov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.72"
anyhow = "1.0.39"
serde = "1.0.125"
serde_json = "1.0.64"
web-sys = "0.3.49"
yew-router = "0.14.0"
validator = "0.13.0"
dotenv_codegen = "0.15.0"

wee_alloc = "0.4.5"
